force-app/main/default/objects/AssignmentChanged__e/AssignmentChanged__e.object-meta.xml
<CustomObject>
    <description
  >Published when a resource assignment is created or changed, so scheduling can detect conflicts and downstream modules can react.</description>
    <label>Assignment Changed</label>
    <pluralLabel>Assignment Changed Events</pluralLabel>
</CustomObject>