force-app/main/default/objects/AssignmentChanged__e/fields/Assignment_Id__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Id__c</fullName>
    <description>Id of the assignment that changed.</description>
    <label>Assignment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>