force-app/main/default/objects/AssignmentChanged__e/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <description
  >Nature of the change: Created, Updated, or Removed.</description>
    <label>Change Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>