force-app/main/default/objects/AssignmentChanged__e/fields/Resource_Id__c.field-meta.xml
<CustomField>
    <fullName>Resource_Id__c</fullName>
    <description>Id of the affected resource.</description>
    <label>Resource Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>